--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body{
 .img-container{
     width:100%;
     height:100%;
+    display:none;
 }
 
 .btn{
@@ -45,7 +46,10 @@ body{
     left:50%;
     transform:translateX(-50%);
 }
+.active{
+    display:block;
+}
 
-/* .fa-solid{
+.fa-solid{
     color:white;
-} */
+}
